Edit button font to avoide iscreem overlaping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,7 @@ form button:hover {
     padding: 1rem;
     margin: 0.1rem;
     cursor: pointer;
-    font-size: 30px;}
+    font-size: 25px;}
  .choices button:hover {
     background: #04333C;
     color: #CBEA3E;}
